--- a/django-moscow-postamats-map/setup.cfg
+++ b/django-moscow-postamats-map/setup.cfg
@@ -1,31 +1,24 @@
 [metadata]
 name = django-moscow-postamats-map
-version = 0.1.2
-description = A Django app to conduct web-based polls.
+version = 0.1.3
+description = A Django app to find best locations for postamats.
 long_description = file: README.rst
-url = https://www.example.com/
-author = Your Name
-author_email = yourname@example.com
-license = BSD-3-Clause  # Example license
+url = https://github.com/Angel367/moscow-postamats-map
+author = Pashkova Volkov Bratushka
+license = MIT  # Example license
 classifiers =
     Environment :: Web Environment
     Framework :: Django :: 4.2
     Intended Audience :: Developers
-    License :: OSI Approved :: BSD License
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Programming Language :: Python
-    Programming Language :: Python :: 3
-    Programming Language :: Python :: 3 :: Only
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
-cmdclass=
-        'install': PostInstallCommand
 
 [options]
 include_package_data = true
 packages = find:
 python_requires = >=3.8
 install_requires =
-    Django >= X.Y  # Replace "X.Y" as appropriate
+    Django == 4.2
