--- a/django-moscow-postamats-map/setup.cfg
+++ b/django-moscow-postamats-map/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = django-moscow-postamats-map
-version = 0.1.3
+version = 0.1.4
 description = A Django app to find best locations for postamats.
 long_description = file: README.rst
 url = https://github.com/Angel367/moscow-postamats-map
@@ -12,7 +12,7 @@ classifiers =
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3
     Topic :: Internet :: WWW/HTTP
     Topic :: Internet :: WWW/HTTP :: Dynamic Content
 
@@ -22,3 +22,12 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     Django == 4.2
+    flask==2.2.3
+    flask_cors==3.0.10
+    django-cors-headers==3.14.0
+
+[build_sphinx]
+project = 'django-moscow-postamats-map'
+version = 0.1.5
+release = 0.1.5
+source-dir = .
